# ccsds-ndm

./: .geminiignore  .gitignore  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  docs.yml  python.yml  rust.yml
bindings/python/: Cargo.toml  pyproject.toml  stubs.py
bindings/python/ccsds_ndm/: __init__.pyi
bindings/python/src/: cdm.rs  common.rs  lib.rs  ocm.rs  oem.rs  omm.rs  opm.rs  rdm.rs  tdm.rs  types.rs
bindings/python/tests/: test_ocm.py  (+1 more)
ccsds-ndm/: Cargo.toml
ccsds-ndm/src/: common.rs  lib.rs  types.rs
ccsds-ndm/src/kvn/: de.rs
ccsds-ndm/src/messages/: cdm.rs  ocm.rs  oem.rs  omm.rs  opm.rs  rdm.rs  tdm.rs
ccsds_ndm/: __init__.pyi
data/books/: adm.md  cdm.md  odm.md  rdm.md  tdm.md  xml.md
data/kvn/: ocm_g15.kvn  ocm_g16.kvn  ocm_g17.kvn  ocm_g18.kvn  ocm_g19.kvn  oem_g11.kvn  oem_g12.kvn  oem_g13.kvn  omm_g7.kvn  omm_g8.kvn  omm_g9.kvn  opm_g1.kvn  opm_g2.kvn  opm_g3.kvn  opm_g4.kvn  rdm_c1.kvn  rdm_c2.kvn  tdm_e1.kvn  tdm_e10.kvn  tdm_e11.kvn  tdm_e12.kvn  tdm_e13.kvn  tdm_e14.kvn  tdm_e15.kvn  tdm_e16.kvn  tdm_e17.kvn  tdm_e18.kvn  tdm_e19.kvn  tdm_e2.kvn  tdm_e20.kvn  tdm_e22.kvn  tdm_e3.kvn  tdm_e4.kvn  tdm_e5.kvn  tdm_e6.kvn  tdm_e7.kvn  tdm_e8.kvn  tdm_e9.kvn
data/xml/: ndm_g21.xml  ndm_g22.xml  ocm_g20.xml  oem_g14.xml  omm_g10.xml  opm_g5.xml  rdm_c3.xml  rdm_c4.xml  tdm_e21.xml  tdm_e23.xml
docs/: README.md  conf.py  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/api/: cdm.rst  core.rst  rdm.rst  tdm.rst
docs/ccsds-books/: adm.rst  cdm.rst  index.rst  ndm.rst  odm.rst  rdm.rst  tdm.rst  xml.rst
(+38 files in other folders)
