# SPDX-FileCopyrightText: 2025 Jochim Maene <16223990+JochimMaene@users.noreply.github.com>
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "ccsds-ndm"
version = "0.0.1"
authors = ["Jochim Maene <16223990+JochimMaene@users.noreply.github.com>"]
edition = "2021"
description = "Parse and generate CCSDS Navigation Data Messages (NDM) in KVN and XML formats"
license = "MPL-2.0"
repository = "https://github.com/JochimMaene/ccsds-ndm"
documentation = "https://docs.rs/ccsds-ndm"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.12.2"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.8.1"
tempfile = "3"

[[bench]]
name = "kvn_benches"
harness = false

